--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
     </section>
     <section id="work">
       <div>
-        Work
-        <img src="images/icon-ellipsis.svg" />
-        5hrs <!-- daily -->
-        Previous - 7hrs <!-- daily -->
-        32hrs <!-- weekly -->
-        Previous - 36hrs <!-- weekly -->
-        103hrs <!-- monthly -->
-        Previous - 128hrs <!-- monthly -->
+        <div id="background work">
+          <img src="images/icon-work.svg" />
+        </div>
+        <div>
+          Work
+          <img src="images/icon-ellipsis.svg" />
+          5hrs <!-- daily -->
+          Previous - 7hrs <!-- daily -->
+          32hrs <!-- weekly -->
+          Previous - 36hrs <!-- weekly -->
+          103hrs <!-- monthly -->
+          Previous - 128hrs <!-- monthly -->
+        </div>
       </div>
     </section>
     <section>
