--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <section id="profile">
-      <div>
+      <div class="profile-container">
         <img src="images/image-jeremy.png" alt="Jeremy profile picture" />
         Report for
         Jeremy Robson
@@ -26,8 +26,8 @@
       </div>
     </section>
     <section id="work">
-      <div>
-        <div id="background work">
+      <div class="container">
+        <div id="background-work">
           <img src="images/icon-work.svg" />
         </div>
         <div>
@@ -42,8 +42,11 @@
         </div>
       </div>
     </section>
-    <section>
-      <div>
+    <section id="play">
+      <div class="container">
+        <div id="background-play">
+          <img src="images/icon-play.svg" />
+        </div>
         Play
         <img src="images/icon-ellipsis.svg" />
         1hr <!-- daily -->
@@ -54,8 +57,11 @@
         Previous - 29hrs <!-- monthly -->
       </div>
     </section>
-    <section>
-      <div>
+    <section id="study">
+      <div class="container">
+        <div id="background-study">
+          <img src="images/icon-study.svg" />
+        </div>
         Study
         <img src="images/icon-ellipsis.svg" />
         0hrs <!-- daily -->
@@ -66,8 +72,11 @@
         Previous - 19hrs <!-- monthly -->
       </div>
     </section>
-    <section>
-      <div>
+    <section id="exercise">
+      <div class="container">
+        <div id="background-exercise">
+          <img src="images/icon-exercise.svg" />
+        </div>
         Exercise
         <img src="images/icon-ellipsis.svg" />
         1hr <!-- daily -->
@@ -78,8 +87,11 @@
         Previous - 18hrs <!-- monthly -->
       </div>
     </section>
-    <section>
-      <div>
+    <section id="social">
+      <div class="container">
+        <div id="background-social">
+          <img src="images/icon-social.svg" />
+        </div>
         Social
         <img src="images/icon-ellipsis.svg" />
         1hr <!-- daily -->
@@ -90,8 +102,11 @@
         Previous - 23hrs <!-- monthly -->
       </div>
     </section>
-    <section>
-      <div>
+    <section id="self care">
+      <div class="container">
+        <div id="background-self-care">
+          <img src="images/icon-self-care.svg" />
+        </div>
         Self Care
         <img src="images/icon-ellipsis.svg" />
         0hrs <!-- daily -->
