--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
 <body>
   <main>
     <section id="profile">
-      <div class="container profile">
-        <img id="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
+      <div class="container-profile">
         <div id="profile-box">
+          <img id="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
           <p>Report for</p>
           <p>Jeremy Robson</p>
         </div>
-        <div id="choices-box">
-          Daily
-          Weekly
-          Monthly
+        <div class="item choices-box">
+          <ul>
+            <li>Daily</li>
+            <li>Weekly</li>
+            <li>Monthly</li>
+          </ul>
         </div>
       </div>
     </section>
     <section id="work">
-      <div class="container">
+      <div class="container work">
         <div id="background-work" class="item background">
           <img src="images/icon-work.svg" />
         </div>
@@ -48,7 +50,7 @@
       </div>
     </section>
     <section id="play">
-      <div class="container">
+      <div class="container play">
         <div id="background-play" class="item background">
           <img src="images/icon-play.svg" />
         </div>
@@ -65,7 +67,7 @@
       </div>
     </section>
     <section id="study">
-      <div class="container">
+      <div class="container study">
         <div id="background-study" class="item background">
           <img src="images/icon-study.svg" />
         </div>
@@ -82,7 +84,7 @@
       </div>
     </section>
     <section id="exercise">
-      <div class="container">
+      <div class="container exercise">
         <div id="background-exercise" class="item background">
           <img src="images/icon-exercise.svg" />
         </div>
@@ -99,7 +101,7 @@
       </div>
     </section>
     <section id="social">
-      <div class="container">
+      <div class="container social">
         <div id="background-social" class="item background">
           <img src="images/icon-social.svg" />
         </div>
@@ -116,7 +118,7 @@
       </div>
     </section>
     <section id="self care">
-      <div class="container">
+      <div class="container self-care">
         <div id="background-self-care" class="item background">
           <img src="images/icon-self-care.svg" />
         </div>
