--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 <body>
   <main>
-    <section id="profile">
-      <div class="container-profile">
-        <div id="profile-box">
-          <img id="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
+    <section class="profile">
+      <div>
+        <div class="profile-box">
+          <img class="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
           <p>Report for</p>
           <p>Jeremy Robson</p>
         </div>
@@ -32,12 +32,12 @@
         </div>
       </div>
     </section>
-    <section id="work">
-      <div class="container work">
+    <section class="container work">
+      <div>
         <div id="background-work" class="item background">
           <img src="images/icon-work.svg" />
         </div>
-        <div class="item text-box">
+        <div class="item">
           Work
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           5hrs <!-- daily -->
@@ -49,12 +49,12 @@
         </div>
       </div>
     </section>
-    <section id="play">
-      <div class="container play">
+    <section class="container play">
+      <div>
         <div id="background-play" class="item background">
           <img src="images/icon-play.svg" />
         </div>
-        <div  class="item text-box">
+        <div  class="item">
           Play
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -66,12 +66,12 @@
         </div>
       </div>
     </section>
-    <section id="study">
-      <div class="container study">
+    <section class="container study">
+      <div>
         <div id="background-study" class="item background">
           <img src="images/icon-study.svg" />
         </div>
-        <div  class="item text-box">
+        <div  class="item">
           Study
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           0hrs <!-- daily -->
@@ -83,12 +83,12 @@
         </div>
       </div>
     </section>
-    <section id="exercise">
-      <div class="container exercise">
+    <section class="container exercise">
+      <div>
         <div id="background-exercise" class="item background">
           <img src="images/icon-exercise.svg" />
         </div>
-        <div class="item text-box">
+        <div class="item">
           Exercise
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -100,12 +100,12 @@
         </div>
       </div>
     </section>
-    <section id="social">
-      <div class="container social">
+    <section class="container social">
+      <div>
         <div id="background-social" class="item background">
           <img src="images/icon-social.svg" />
         </div>
-        <div class="item text-box">
+        <div class="item">
           Social
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -117,12 +117,12 @@
           </div>
       </div>
     </section>
-    <section id="self care">
-      <div class="container self-care">
+    <section class="container self-care">
+      <div>
         <div id="background-self-care" class="item background">
           <img src="images/icon-self-care.svg" />
         </div>
-        <div class="item text-box">
+        <div class="item">
           Self Care
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           0hrs <!-- daily -->
