--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </section>
-    <section class="container work">
+    <section class="container">
       <div>
         <div id="background-work" class="item background">
           <img src="images/icon-work.svg" />
@@ -49,12 +49,12 @@
         </div>
       </div>
     </section>
-    <section class="container play">
+    <section class="container">
       <div>
         <div id="background-play" class="item background">
           <img src="images/icon-play.svg" />
         </div>
-        <div  class="item">
+        <div class="item">
           Play
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -66,7 +66,7 @@
         </div>
       </div>
     </section>
-    <section class="container study">
+    <section class="container">
       <div>
         <div id="background-study" class="item background">
           <img src="images/icon-study.svg" />
@@ -83,7 +83,7 @@
         </div>
       </div>
     </section>
-    <section class="container exercise">
+    <section class="container">
       <div>
         <div id="background-exercise" class="item background">
           <img src="images/icon-exercise.svg" />
@@ -100,7 +100,7 @@
         </div>
       </div>
     </section>
-    <section class="container social">
+    <section class="container">
       <div>
         <div id="background-social" class="item background">
           <img src="images/icon-social.svg" />
@@ -114,10 +114,10 @@
           Previous - 10hrs <!-- weekly -->
           21hrs <!-- monthly -->
           Previous - 23hrs <!-- monthly -->
-          </div>
+        </div>
       </div>
     </section>
-    <section class="container self-care">
+    <section class="container">
       <div>
         <div id="background-self-care" class="item background">
           <img src="images/icon-self-care.svg" />
@@ -137,7 +137,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Youngeun</a>.
   </div>
   <script src="script.js"></script>
 </body>
