--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>Report for</p>
           <p>Jeremy Robson</p>
         </div>
-        <div class="item choices-box">
+        <div class="choices-box">
           <ul>
             <li>Daily</li>
             <li>Weekly</li>
@@ -34,10 +34,10 @@
     </section>
     <section class="container">
       <div>
-        <div id="background-work" class="item background">
+        <div id="background-work" class="background">
           <img src="images/icon-work.svg" />
         </div>
-        <div class="item">
+        <div class="time-box">
           Work
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           5hrs <!-- daily -->
@@ -51,10 +51,10 @@
     </section>
     <section class="container">
       <div>
-        <div id="background-play" class="item background">
+        <div id="background-play" class="background">
           <img src="images/icon-play.svg" />
         </div>
-        <div class="item">
+        <div class="time-box">
           Play
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -68,10 +68,10 @@
     </section>
     <section class="container">
       <div>
-        <div id="background-study" class="item background">
+        <div id="background-study" class="background">
           <img src="images/icon-study.svg" />
         </div>
-        <div  class="item">
+        <div  class="time-box">
           Study
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           0hrs <!-- daily -->
@@ -85,10 +85,10 @@
     </section>
     <section class="container">
       <div>
-        <div id="background-exercise" class="item background">
+        <div id="background-exercise" class="background">
           <img src="images/icon-exercise.svg" />
         </div>
-        <div class="item">
+        <div class="time-box">
           Exercise
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -102,10 +102,10 @@
     </section>
     <section class="container">
       <div>
-        <div id="background-social" class="item background">
+        <div id="background-social" class="background">
           <img src="images/icon-social.svg" />
         </div>
-        <div class="item">
+        <div class="time-box">
           Social
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           1hr <!-- daily -->
@@ -119,10 +119,10 @@
     </section>
     <section class="container">
       <div>
-        <div id="background-self-care" class="item background">
+        <div id="background-self-care" class="background">
           <img src="images/icon-self-care.svg" />
         </div>
-        <div class="item">
+        <div class="time-box">
           Self Care
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
           0hrs <!-- daily -->
