--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="profile-box">
           <img class="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
           <p>Report for</p>
-          <p>Jeremy Robson</p>
+          <h1>Jeremy Robson</h1>
         </div>
         <div class="choices-box">
           <ul>
@@ -35,7 +35,7 @@
     <section class="container">
       <div>
         <div id="background-work" class="background">
-          <img src="images/icon-work.svg" />
+          <img class="background-pic" src="images/icon-work.svg" />
         </div>
         <div class="time-box">
           Work
@@ -52,7 +52,7 @@
     <section class="container">
       <div>
         <div id="background-play" class="background">
-          <img src="images/icon-play.svg" />
+          <img class="background-pic" src="images/icon-play.svg" />
         </div>
         <div class="time-box">
           Play
@@ -69,7 +69,7 @@
     <section class="container">
       <div>
         <div id="background-study" class="background">
-          <img src="images/icon-study.svg" />
+          <img class="background-pic" src="images/icon-study.svg" />
         </div>
         <div  class="time-box">
           Study
@@ -86,7 +86,7 @@
     <section class="container">
       <div>
         <div id="background-exercise" class="background">
-          <img src="images/icon-exercise.svg" />
+          <img class="background-pic" src="images/icon-exercise.svg" />
         </div>
         <div class="time-box">
           Exercise
@@ -103,7 +103,7 @@
     <section class="container">
       <div>
         <div id="background-social" class="background">
-          <img src="images/icon-social.svg" />
+          <img class="background-pic" src="images/icon-social.svg" />
         </div>
         <div class="time-box">
           Social
@@ -120,7 +120,7 @@
     <section class="container">
       <div>
         <div id="background-self-care" class="background">
-          <img src="images/icon-self-care.svg" />
+          <img class="background-pic" src="images/icon-self-care.svg" />
         </div>
         <div class="time-box">
           Self Care
