--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
       <div>
         <div class="profile-box">
           <img class="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
-          <p>Report for</p>
+          <p class="sub">Report for</p>
           <h1>Jeremy Robson</h1>
         </div>
         <div class="choices-box">
           <ul>
-            <li>Daily</li>
-            <li>Weekly</li>
-            <li>Monthly</li>
+            <li>
+              <button type="button">Daily</button>
+            </li>
+            <li>
+              <button type="button selected">Weekly</button>
+            </li>
+            <li>
+              <button type="button">Monthly</button>
+            </li>
           </ul>
         </div>
       </div>
@@ -35,102 +41,102 @@
     <section class="container">
       <div>
         <div id="background-work" class="background">
-          <img class="background-pic" src="images/icon-work.svg" />
+          <img class="background-pic" src="images/icon-work.svg" alt="luggage" />
         </div>
         <div class="time-box">
-          Work
+          <p class="title">Work</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-          5hrs <!-- daily -->
-          Previous - 7hrs <!-- daily -->
-          32hrs <!-- weekly -->
-          Previous - 36hrs <!-- weekly -->
-          103hrs <!-- monthly -->
-          Previous - 128hrs <!-- monthly -->
+            5hrs <!-- daily -->
+            Previous - 7hrs <!-- daily -->
+            32hrs <!-- weekly -->
+            Previous - 36hrs <!-- weekly -->
+            103hrs <!-- monthly -->
+            Previous - 128hrs <!-- monthly -->
         </div>
       </div>
     </section>
     <section class="container">
       <div>
         <div id="background-play" class="background">
-          <img class="background-pic" src="images/icon-play.svg" />
+          <img class="background-pic" src="images/icon-play.svg" alt="controller" />
         </div>
         <div class="time-box">
-          Play
+          <p class="title">Play</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-          1hr <!-- daily -->
-          Previous - 2hrs <!-- daily -->
-          10hrs <!-- weekly -->
-          Previous - 8hrs <!-- weekly -->
-          23hrs <!-- monthly -->
-          Previous - 29hrs <!-- monthly -->
+            1hr <!-- daily -->
+            Previous - 2hrs <!-- daily -->
+            10hrs <!-- weekly -->
+            Previous - 8hrs <!-- weekly -->
+            23hrs <!-- monthly -->
+            Previous - 29hrs <!-- monthly -->
         </div>
       </div>
     </section>
     <section class="container">
       <div>
         <div id="background-study" class="background">
-          <img class="background-pic" src="images/icon-study.svg" />
+          <img class="background-pic" src="images/icon-study.svg" alt="book" />
         </div>
-        <div  class="time-box">
-          Study
+        <div class="time-box">
+          <p class="title">Study</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-          0hrs <!-- daily -->
-          Previous - 1hr <!-- daily -->
-          4hrs <!-- weekly -->
-          Previous - 7hrs <!-- weekly -->
-          13hrs <!-- monthly -->
-          Previous - 19hrs <!-- monthly -->
+            0hrs <!-- daily -->
+            Previous - 1hr <!-- daily -->
+            4hrs <!-- weekly -->
+            Previous - 7hrs <!-- weekly -->
+            13hrs <!-- monthly -->
+            Previous - 19hrs <!-- monthly -->
         </div>
       </div>
     </section>
     <section class="container">
       <div>
         <div id="background-exercise" class="background">
-          <img class="background-pic" src="images/icon-exercise.svg" />
+          <img class="background-pic" src="images/icon-exercise.svg" alt="man running"/>
         </div>
         <div class="time-box">
-          Exercise
+          <p class="title">Exercise</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-          1hr <!-- daily -->
-          Previous - 1hr <!-- daily -->
-          4hrs <!-- weekly -->
-          Previous - 5hrs <!-- weekly -->
-          11hrs <!-- monthly -->
-          Previous - 18hrs <!-- monthly -->
+            1hr <!-- daily -->
+            Previous - 1hr <!-- daily -->
+            4hrs <!-- weekly -->
+            Previous - 5hrs <!-- weekly -->
+            11hrs <!-- monthly -->
+            Previous - 18hrs <!-- monthly -->
         </div>
       </div>
     </section>
     <section class="container">
       <div>
         <div id="background-social" class="background">
-          <img class="background-pic" src="images/icon-social.svg" />
+          <img class="background-pic" src="images/icon-social.svg" alt="message box"/>
         </div>
         <div class="time-box">
-          Social
+          <p class="title">Social</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-          1hr <!-- daily -->
-          Previous - 3hrs <!-- daily -->
-          5hrs <!-- weekly -->
-          Previous - 10hrs <!-- weekly -->
-          21hrs <!-- monthly -->
-          Previous - 23hrs <!-- monthly -->
+            1hr <!-- daily -->
+            Previous - 3hrs <!-- daily -->
+            5hrs <!-- weekly -->
+            Previous - 10hrs <!-- weekly -->
+            21hrs <!-- monthly -->
+            Previous - 23hrs <!-- monthly -->
         </div>
       </div>
     </section>
     <section class="container">
       <div>
         <div id="background-self-care" class="background">
-          <img class="background-pic" src="images/icon-self-care.svg" />
+          <img class="background-pic" src="images/icon-self-care.svg" alt="heart" />
         </div>
         <div class="time-box">
-          Self Care
+          <p class="title">Self Care</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-          0hrs <!-- daily -->
-          Previous - 1hr <!-- daily -->
-          2hrs <!-- weekly -->
-          Previous - 2hrs <!-- weekly -->
-          7hrs <!-- monthly -->
-          Previous - 11hrs <!-- monthly -->
+            0hrs <!-- daily -->
+            Previous - 1hr <!-- daily -->
+            2hrs <!-- weekly -->
+            Previous - 2hrs <!-- weekly -->
+            7hrs <!-- monthly -->
+            Previous - 11hrs <!-- monthly -->
         </div>
       </div>
     </section>
