--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div>
         <div class="profile-box">
           <img class="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
-          <p class="sub">Report for</p>
+          <p class="sub-header">Report for</p>
           <h1>Jeremy Robson</h1>
         </div>
         <div class="choices-box">
@@ -46,12 +46,14 @@
         <div class="time-box">
           <p class="title">Work</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            5hrs <!-- daily -->
-            Previous - 7hrs <!-- daily -->
-            32hrs <!-- weekly -->
-            Previous - 36hrs <!-- weekly -->
-            103hrs <!-- monthly -->
-            Previous - 128hrs <!-- monthly -->
+            <p class="time">5hrs</p> <!-- daily -->
+            <p class="day">Previous Day - 7hrs</p> <!-- daily -->
+            <!--
+            32hrs (weekly)
+            Previous Week - 36hrs (weekly)
+            103hrs (monthly)
+            Previous Month - 128hrs (monthly)
+            -->
         </div>
       </div>
     </section>
@@ -63,12 +65,14 @@
         <div class="time-box">
           <p class="title">Play</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            1hr <!-- daily -->
-            Previous - 2hrs <!-- daily -->
-            10hrs <!-- weekly -->
-            Previous - 8hrs <!-- weekly -->
-            23hrs <!-- monthly -->
-            Previous - 29hrs <!-- monthly -->
+            <p class="time">1hr</p> <!-- daily -->
+            <p class="day">Previous Day - 2hrs</p> <!-- daily -->
+            <!--
+            10hrs (weekly)
+            Previous - 8hrs (weekly)
+            23hrs (monthly)
+            Previous - 29hrs (monthly)
+            -->
         </div>
       </div>
     </section>
@@ -80,12 +84,14 @@
         <div class="time-box">
           <p class="title">Study</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            0hrs <!-- daily -->
-            Previous - 1hr <!-- daily -->
-            4hrs <!-- weekly -->
-            Previous - 7hrs <!-- weekly -->
-            13hrs <!-- monthly -->
-            Previous - 19hrs <!-- monthly -->
+            <p class="time">0hrs</p> <!-- daily -->
+            <p class="day">Previous Day - 1hr</p> <!-- daily -->
+            <!--
+            4hrs (weekly)
+            Previous - 7hrs (weekly)
+            13hrs (monthly)
+            Previous - 19hrs (monthly)
+            -->
         </div>
       </div>
     </section>
@@ -97,12 +103,14 @@
         <div class="time-box">
           <p class="title">Exercise</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            1hr <!-- daily -->
-            Previous - 1hr <!-- daily -->
-            4hrs <!-- weekly -->
-            Previous - 5hrs <!-- weekly -->
-            11hrs <!-- monthly -->
-            Previous - 18hrs <!-- monthly -->
+            <p class="time">1hr</p> <!-- daily -->
+            <p class="day">Previous Day - 1hr</p> <!-- daily -->
+            <!--
+            4hrs (weekly)
+            Previous - 5hrs (weekly)
+            11hrs (monthly)
+            Previous - 18hrs (monthly)
+            -->
         </div>
       </div>
     </section>
@@ -114,12 +122,14 @@
         <div class="time-box">
           <p class="title">Social</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            1hr <!-- daily -->
-            Previous - 3hrs <!-- daily -->
-            5hrs <!-- weekly -->
-            Previous - 10hrs <!-- weekly -->
-            21hrs <!-- monthly -->
-            Previous - 23hrs <!-- monthly -->
+            <p class="time">1hr</p> <!-- daily -->
+            <p class="day">Previous Day - 3hrs</p> <!-- daily -->
+            <!--
+            5hrs (weekly)
+            Previous - 10hrs (weekly)
+            21hrs (monthly)
+            Previous - 23hrs (monthly)
+            -->
         </div>
       </div>
     </section>
@@ -131,12 +141,14 @@
         <div class="time-box">
           <p class="title">Self Care</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            0hrs <!-- daily -->
-            Previous - 1hr <!-- daily -->
-            2hrs <!-- weekly -->
-            Previous - 2hrs <!-- weekly -->
-            7hrs <!-- monthly -->
-            Previous - 11hrs <!-- monthly -->
+            <p class="time">0hrs</p> <!-- daily -->
+            <p class="day">Previous Day - 1hr</p> <!-- daily -->
+            <!--
+            2hrs (weekly)
+            Previous - 2hrs (weekly)
+            7hrs (monthly)
+            Previous - 11hrs (monthly)
+            -->
         </div>
       </div>
     </section>
