--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="choices-box">
           <ul>
             <li>
-              <button type="button">Daily</button>
+              <button id="buttonDaily" type="button">Daily</button>
             </li>
             <li>
-              <button type="button selected">Weekly</button>
+              <button id="buttonWeekly" type="button selected">Weekly</button>
             </li>
             <li>
-              <button type="button">Monthly</button>
+              <button id="buttonMonthly" type="button">Monthly</button>
             </li>
           </ul>
         </div>
@@ -46,8 +46,8 @@
         <div class="time-box">
           <p class="title">Work</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p class="time">5hrs</p> <!-- daily -->
-            <p class="day">Previous Day - 7hrs</p> <!-- daily -->
+            <p id="work-time" class="time">5hrs</p> <!-- daily -->
+            <p id="work-previous" class="day">Previous Day - 7hrs</p> <!-- daily -->
             <!--
             32hrs (weekly)
             Previous Week - 36hrs (weekly)
@@ -65,8 +65,8 @@
         <div class="time-box">
           <p class="title">Play</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p class="time">1hr</p> <!-- daily -->
-            <p class="day">Previous Day - 2hrs</p> <!-- daily -->
+            <p id="play-time" class="time">1hr</p> <!-- daily -->
+            <p id="play-previous" class="day">Previous Day - 2hrs</p> <!-- daily -->
             <!--
             10hrs (weekly)
             Previous - 8hrs (weekly)
@@ -84,8 +84,8 @@
         <div class="time-box">
           <p class="title">Study</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p class="time">0hrs</p> <!-- daily -->
-            <p class="day">Previous Day - 1hr</p> <!-- daily -->
+            <p id="study-time" class="time">0hrs</p> <!-- daily -->
+            <p id="study-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
             <!--
             4hrs (weekly)
             Previous - 7hrs (weekly)
@@ -103,8 +103,8 @@
         <div class="time-box">
           <p class="title">Exercise</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p class="time">1hr</p> <!-- daily -->
-            <p class="day">Previous Day - 1hr</p> <!-- daily -->
+            <p id="exercise-time" class="time">1hr</p> <!-- daily -->
+            <p id="exercise-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
             <!--
             4hrs (weekly)
             Previous - 5hrs (weekly)
@@ -122,8 +122,8 @@
         <div class="time-box">
           <p class="title">Social</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p class="time">1hr</p> <!-- daily -->
-            <p class="day">Previous Day - 3hrs</p> <!-- daily -->
+            <p id="social-time" class="time">1hr</p> <!-- daily -->
+            <p id="social-previous" class="day">Previous Day - 3hrs</p> <!-- daily -->
             <!--
             5hrs (weekly)
             Previous - 10hrs (weekly)
@@ -141,8 +141,8 @@
         <div class="time-box">
           <p class="title">Self Care</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p class="time">0hrs</p> <!-- daily -->
-            <p class="day">Previous Day - 1hr</p> <!-- daily -->
+            <p id="self-care-time" class="time">0hrs</p> <!-- daily -->
+            <p id="self-care-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
             <!--
             2hrs (weekly)
             Previous - 2hrs (weekly)
