--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       <div>
         <div class="profile-box">
           <img class="profile-pic" src="images/image-jeremy.png" alt="Jeremy profile picture" />
-          <p class="sub-header">Report for</p>
-          <h1>Jeremy Robson</h1>
+          <div class="profile-text">
+            <p class="sub-header">Report for</p>
+            <h1>Jeremy Robson</h1>
+          </div>
         </div>
         <div class="choices-box">
           <ul>
@@ -46,8 +48,10 @@
         <div class="time-box">
           <p class="title">Work</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p id="work-time" class="time">5hrs</p> <!-- daily -->
-            <p id="work-previous" class="day">Previous Day - 7hrs</p> <!-- daily -->
+            <div class="text">
+              <p id="work-time" class="time">5hrs</p> <!-- daily -->
+              <p id="work-previous" class="day">Previous Day - 7hrs</p> <!-- daily -->
+            </div>
             <!--
             32hrs (weekly)
             Previous Week - 36hrs (weekly)
@@ -65,8 +69,10 @@
         <div class="time-box">
           <p class="title">Play</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p id="play-time" class="time">1hr</p> <!-- daily -->
-            <p id="play-previous" class="day">Previous Day - 2hrs</p> <!-- daily -->
+            <div class="text">
+              <p id="play-time" class="time">1hr</p> <!-- daily -->
+              <p id="play-previous" class="day">Previous Day - 2hrs</p> <!-- daily -->
+            </div>
             <!--
             10hrs (weekly)
             Previous - 8hrs (weekly)
@@ -84,8 +90,10 @@
         <div class="time-box">
           <p class="title">Study</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p id="study-time" class="time">0hrs</p> <!-- daily -->
-            <p id="study-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
+            <div class="text">
+              <p id="study-time" class="time">0hrs</p> <!-- daily -->
+              <p id="study-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
+            </div>
             <!--
             4hrs (weekly)
             Previous - 7hrs (weekly)
@@ -103,8 +111,10 @@
         <div class="time-box">
           <p class="title">Exercise</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p id="exercise-time" class="time">1hr</p> <!-- daily -->
-            <p id="exercise-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
+            <div class="text">
+              <p id="exercise-time" class="time">1hr</p> <!-- daily -->
+              <p id="exercise-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
+            </div>
             <!--
             4hrs (weekly)
             Previous - 5hrs (weekly)
@@ -122,8 +132,10 @@
         <div class="time-box">
           <p class="title">Social</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p id="social-time" class="time">1hr</p> <!-- daily -->
-            <p id="social-previous" class="day">Previous Day - 3hrs</p> <!-- daily -->
+            <div class="text">
+              <p id="social-time" class="time">1hr</p> <!-- daily -->
+              <p id="social-previous" class="day">Previous Day - 3hrs</p> <!-- daily -->
+            </div>
             <!--
             5hrs (weekly)
             Previous - 10hrs (weekly)
@@ -141,8 +153,10 @@
         <div class="time-box">
           <p class="title">Self Care</p>
           <img class="ellipsis" src="images/icon-ellipsis.svg" />
-            <p id="self-care-time" class="time">0hrs</p> <!-- daily -->
-            <p id="self-care-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
+            <div class="text">
+              <p id="self-care-time" class="time">0hrs</p> <!-- daily -->
+              <p id="self-care-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
+            </div>
             <!--
             2hrs (weekly)
             Previous - 2hrs (weekly)
