--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="time-box">
           <p class="title">Work</p>
-          <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          <img class="ellipsis" src="images/icon-ellipsis.svg" alt="three dots" />
             <div class="text">
               <p id="work-time" class="time">5hrs</p> <!-- daily -->
               <p id="work-previous" class="day">Previous Day - 7hrs</p> <!-- daily -->
@@ -64,7 +64,7 @@
         </div>
         <div class="time-box">
           <p class="title">Play</p>
-          <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          <img class="ellipsis" src="images/icon-ellipsis.svg" alt="three dots" />
             <div class="text">
               <p id="play-time" class="time">1hr</p> <!-- daily -->
               <p id="play-previous" class="day">Previous Day - 2hrs</p> <!-- daily -->
@@ -85,7 +85,7 @@
         </div>
         <div class="time-box">
           <p class="title">Study</p>
-          <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          <img class="ellipsis" src="images/icon-ellipsis.svg" alt="three dots" />
             <div class="text">
               <p id="study-time" class="time">0hrs</p> <!-- daily -->
               <p id="study-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
@@ -106,7 +106,7 @@
         </div>
         <div class="time-box">
           <p class="title">Exercise</p>
-          <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          <img class="ellipsis" src="images/icon-ellipsis.svg" alt="three dots" />
             <div class="text">
               <p id="exercise-time" class="time">1hr</p> <!-- daily -->
               <p id="exercise-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
@@ -127,7 +127,7 @@
         </div>
         <div class="time-box">
           <p class="title">Social</p>
-          <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          <img class="ellipsis" src="images/icon-ellipsis.svg" alt="three dots" />
             <div class="text">
               <p id="social-time" class="time">1hr</p> <!-- daily -->
               <p id="social-previous" class="day">Previous Day - 3hrs</p> <!-- daily -->
@@ -148,7 +148,7 @@
         </div>
         <div class="time-box">
           <p class="title">Self Care</p>
-          <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          <img class="ellipsis" src="images/icon-ellipsis.svg" alt="three dots" />
             <div class="text">
               <p id="self-care-time" class="time">0hrs</p> <!-- daily -->
               <p id="self-care-previous" class="day">Previous Day - 1hr</p> <!-- daily -->
