--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Youngeun</a>.
+    Coded by <a href="https://github.com/JYoungeun" target="_blank">Youngeun</a>.
   </div>
   <script src="script.js"></script>
 </body>
